error in locate schema

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": "https://yandex.com/images/", // Make sure to set the baseUrl
     "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+      "@/*": ["src/*"]
+    },
+   }
 }
